--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,48 +1,56 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
-    background-color: #DCE0E4;
+    background-color: #dce0e4;
 }
+
 /* NAVBAR */
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #F4F3F3;
+    background-color: #f4f3f3;
 }
+
 nav .nav-left {
     margin-left: 130px;
-
 }
+
 nav .nav-left ul {
     display: flex;
     align-items: center;
     list-style-type: none;
     padding: 0;
 }
+
 nav .nav-left ul li {
     margin-right: 20px;
 }
+
 nav .nav-left ul li img {
     width: 30px;
     background-color: red;
     padding: 5px;
 }
+
 nav .nav-left ul li a {
     text-decoration: none;
     color: black;
     font-size: 20px;
 }
+
 nav .nav-right {
     background-color: black;
     padding: 10px;
     border-radius: 10px;
     margin-right: 130px;
 }
+
 nav .nav-right a {
     color: white;
     text-decoration: none;
 }
+
 nav .nav-left ul li a.active {
     font-weight: bold;
 }
@@ -59,69 +67,80 @@ nav .nav-left ul li a.active {
     overflow: hidden;
     box-shadow: 0 5px 9px -5px #333;
 }
+
 .card-content {
     width: 710px;
     margin: auto 0;
 }
+
 .card-content h1 {
     margin: 20px 50px;
-
 }
+
 .card-content p {
     margin: 0 50px;
     text-align: justify;
 }
+
 .card-profile {
     width: 300px;
     margin: 50px auto;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 20px 30px #dbdbdb; 
+    box-shadow: 0 20px 30px #dbdbdb;
 }
+
 .card-profile-content {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .card-profile-content h2 {
     margin: 13px 0 0;
 }
+
 .card-profile-content p {
     margin: 5px 0 13px;
 }
+
 .downloads {
     display: flex;
     flex-direction: row;
     margin: 30px 50px;
     align-items: center;
 }
+
 .downloads button {
-    padding: 8px 20px; 
-    border-radius: 20px; 
-    border:0; 
-    background-color: black; 
+    padding: 8px 20px;
+    border-radius: 20px;
+    border: 0;
+    background-color: black;
     color: white;
     margin-right: 15px;
 }
+
 a.contact {
-    text-decoration: none; 
-    color:white;
+    text-decoration: none;
+    color: white;
 }
+
 .social-media {
-    margin: 20px 50px; 
-    width: 300px; 
+    margin: 20px 50px;
+    width: 300px;
     display: flex;
     justify-content: left;
 }
+
 .fa-brands {
-    color: white; 
-    background-color: black; 
-    width: 13px; 
-    height: 13px; 
-    line-height: 13px; 
-    border-radius: 50%; 
-    text-align: center; 
-    padding: 12px; 
+    color: white;
+    background-color: black;
+    width: 13px;
+    height: 13px;
+    line-height: 13px;
+    border-radius: 50%;
+    text-align: center;
+    padding: 12px;
     margin: 5px;
 }
 /* END CARD & CONTENT */
@@ -131,19 +150,23 @@ a.contact {
     width: 390px;
     margin: auto;
 }
+
 .container h1 {
     text-align: center;
     margin-top: 90px;
 }
+
 form div {
     display: flex;
     flex-direction: column;
     margin: 20px 0;
 }
+
 form div label {
     font-size: 20px;
     margin-bottom: 5px;
 }
+
 form div input {
     font-size: 20px;
     border: 0px;
@@ -151,6 +174,7 @@ form div input {
     padding: 10px;
     box-shadow: 0 5px 4px -5px #333;
 }
+
 form div select {
     font-size: 20px;
     border: none;
@@ -158,12 +182,15 @@ form div select {
     border-radius: 3px;
     box-shadow: 0 5px 4px -5px #333;
 }
+
 form div select option {
     font-size: 20px;
 }
+
 form div select option:nth-child(1) {
     display: none;
 }
+
 form div textarea {
     font-family: Arial, Helvetica, sans-serif;
     border: none;
@@ -174,10 +201,12 @@ form div textarea {
     height: 80px;
     box-shadow: 0 5px 4px -5px #333;
 }
+
 form .submit {
     float: right;
     width: 107px;
 }
+
 form .submit button {
     font-size: 20px;
     width: 100%;
