--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@ body {
     background-color: #dce0e4;
 }
 
+nav .navbar-mobile {
+    display: none;
+}
+
 /* CARD & CONTENT*/
 .card {
     background-color: white;
