--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -10,7 +10,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background-color: #f4f3f3;
+        background-color: white;
     }
 
     nav .nav-left, nav .nav-right {
